WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67961
Broken ARM build - missing semicolon in JavaScriptCore/assembler/MacroAssemblerARM.h
https://bugs.webkit.org/show_bug.cgi?id=67961
Summary
Broken ARM build - missing semicolon in JavaScriptCore/assembler/MacroAssembl...
Michael Saboff
Reported
2011-09-12 15:34:37 PDT
In Source/JavaScriptCore/assembler/MacroAssemblerARM.h, in the newly added method branch16() from <
http://trac.webkit.org/changeset/94981
> the call to lshift32(16, ARMRegisters::S1) is not terminated with a semicolon.
Attachments
Proposed patch
(1.27 KB, patch)
2011-09-12 15:39 PDT
,
Michael Saboff
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2011-09-12 15:39:18 PDT
Created
attachment 107092
[details]
Proposed patch
Michael Saboff
Comment 2
2011-09-12 15:42:59 PDT
Committed
r94985
: <
http://trac.webkit.org/changeset/94985
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug