Broken ARM build - missing semicolon in JavaScriptCore/assembler/MacroAssemblerARM.h https://bugs.webkit.org/show_bug.cgi?id=67961

Added missing semicolon.

Reviewed by Ryosuke Niwa.

* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::branch16):


Canonical link: https://commits.webkit.org/83870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94985 268f45cc-cd09-0410-ab3c-d52691b4dbfc